--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 .App {
   text-align: center;
-  background-image: url('./assets/backgroundchristmast.jpg');
+  /* background-image: url('./assets/backgroundchristmast.jpg'); */
+  /* background-color: rgb(111, 111, 194); */
+  background-color: rgb(189, 192, 230);
   background-size: cover;
   height: 100vh;
   width: 100%;
