--- a/src/app/components/jugadores/jugadores.component.css
+++ b/src/app/components/jugadores/jugadores.component.css
@@ -10,11 +10,11 @@
     }
 }
 
-.screen {
+/* .screen {
 	box-sizing: border-box;
 	padding: 20px 10px 2.5px 10px;
 	display: block;
 	margin: 0 auto;
 	width: 962px;
 	min-height: 96px;
-}
+} */
