--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,8 @@
   text-align: center;
   /* background-image: url('./assets/backgroundchristmast.jpg'); */
   /* background-color: rgb(111, 111, 194); */
-  background-color: rgb(189, 192, 230);
+  /* background-color: rgb(189, 192, 230); */
+  background-color: white;
   background-size: cover;
   height: 100vh;
   width: 100%;
